2018-09-06  Tomas Popela  <tpopela@redhat.com>

        [JSC] Build broken after r234975 on s390x, ppc64le, armv7hl
        https://bugs.webkit.org/show_bug.cgi?id=189078

        Reviewed by Mark Lam.

        Caused by the GCC bug - https://gcc.gnu.org/bugzilla/show_bug.cgi?id=70124.
        Using the ternary operator instead of std::max() fixes it.

        * heap/RegisterState.h:

2018-09-05  Mark Lam  <mark.lam@apple.com>

        JSPropertyNameEnumerator::visitChildren() needs to visit its m_cachedStructureID.
        https://bugs.webkit.org/show_bug.cgi?id=189124
        <rdar://problem/43863605>

        Reviewed by Filip Pizlo.

        It is assumed that the Structure for the m_cachedStructureID will remain alive
        while the m_cachedStructureID is in use.  This prevents the structureID from being
        re-used for a different Structure.

        * runtime/JSPropertyNameEnumerator.cpp:
        (JSC::JSPropertyNameEnumerator::visitChildren):

2018-09-05  Ross Kirsling  <ross.kirsling@sony.com>

        [ESNext] Symbol.prototype.description
        https://bugs.webkit.org/show_bug.cgi?id=186686

        Reviewed by Keith Miller.

        Symbol.prototype.description was implemented in r232404, but has one small bug:
        It should return undefined for a null symbol.

        * runtime/Symbol.cpp:
        (JSC::Symbol::description const):
        * runtime/SymbolPrototype.cpp:
        (JSC::symbolProtoGetterDescription):
        Address the null symbol case.

2018-09-04  Keith Miller  <keith_miller@apple.com>

        RELEASE_ASSERT at ../../Source/JavaScriptCore/heap/MarkedSpace.h:83
        https://bugs.webkit.org/show_bug.cgi?id=188917

        Reviewed by Mark Lam.

        Our allocators should be able to handle allocating a zero-sized object.
        Zero-sized objects will be allocated into the smallest size class.

        * dfg/DFGSpeculativeJIT.cpp:
        (JSC::DFG::SpeculativeJIT::compileNewTypedArrayWithSize):